yoshimi 1.3.x

2016-2-21 Will
- Reorganised CLI root and bank commands.
- Implemented creating & deleteing new banks in CLI.


2016-2-19 Will
- Corrected desktop file.
- Updated docs & screen images.

2016-2-18 Will
- Bugfix: CLI can again list current bank/root.
- Bugfix: on debian testing GUI was locking up if you reduced the ID of the
  last root path in the list.git status.
  

2016-2-17 Will
- Instrument file changes are now individually checked after the attempt
  instead of tested for writability in advance.
- Path window no longer offers save/not on close - always saves.
- Bugfix: above changes didn't update gui correctly :(

2016-2-15 Will
- Fixed regression. Moved bank and history loading back into config.
  Previous change didn't improve startup behaviour and messed with LV2.
- Created 'stateChanged' variable for future use. 

2016-2-14 Will
- Removed jack/alsa tests from CMakeLists.txt It's now redundant.
- Re-enabled up to 128 roots and banks and removed redundant maximum
  test - MIDI can't send > 127 and command line does it's own check.
- Updated docs.
- Added 'Muted Synth' instrument patch. 

2016-2-14 Andrew
- Removed ControlInterface (obsoleted) + fixes for gcc-6 

2016-2-8 Will
- GCC 6 fix?

2016-2-7 Will
- Corrected man page.

2016-2-1 Will
- Fixed regression. Config was being resaved when nothing had changed.
- Refined message hiding. Applies to Reports console and CLI. Hiding
  is also independent from those forced to CLI only.

2016-1-31 Will
- Small gui correction to remove unnecessary scroll bar.
- Recent Scale/State now greyed out if empty.
- Bugfix: Wrong name in CMakeLists.txt failed in some environments.

2016-1-30 Will
- Corrected some GUI text and tooltips.
- Added check for ncurses in cmake.
- MAX_HISTORY now set to 25 in CMakeLists.txt
- Banks file now follows compression schedule.
- Current available parts now stored in 'MASTER' part of patch sets.
- .config & .state now marked as yoshimi only.

2016-1-29 Will