@@ -1,9 +1,13 @@
-yoshimi 1.3.x
+yoshimi 1.3.9 rc1
+
+2016-2-21 Andrew
+- setCurrentRootID properly fixed.
 
 2016-2-21 Will
 - Reorganised CLI root and bank commands.
 - Implemented creating & deleteing new banks in CLI.
-
+- Bugfix: deleting bank failed if there was no .bankdir file.
+- Set version to 1.3.9 rc1.
 
 2016-2-19 Will
 - Corrected desktop file.
